# xcoreutils-seq

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  seq.cpp
