CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(seq)

ADD_SUBDIRECTORY(src)

# SET(CMAKE_CXX_STANDARD 17)
# SET(SOURCES seq.cpp)

# ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

# SET(Boost_USE_STATIC_LIBS OFF)
# SET(Boost_USE_MULTITHREADED ON)
# SET(Boost_USE_STATIC_RUNTIME OFF)

# FIND_PACKAGE(Boost 1.69.0 COMPONENTS program_options)

# IF (Boost_FOUND)
#     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
#     TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
# ENDIF()
